--- a/style/style.css
+++ b/style/style.css
@@ -17,7 +17,7 @@ html, body {
    padding-left: 250px;
 }
 
-#sidebar-wrapper {
+#sidebar-container {
    z-index: 1000;
    position: fixed;
    left: 250px;
@@ -32,17 +32,17 @@ html, body {
    transition: all 0.5s ease;
 }
 
-#wrapper.toggled #sidebar-wrapper {
+#wrapper.toggled #sidebar-container {
    width: 250px;
 }
 
-#page-content-wrapper {
+#page-content-container {
    width: 100%;
    position: absolute;
    padding: 15px;
 }
 
-#wrapper.toggled #page-content-wrapper {
+#wrapper.toggled #page-content-container {
    position: absolute;
    margin-right: -250px;
 }
@@ -145,7 +145,7 @@ html, body {
   padding: 5px;
 }
 
-#categories {
+#tags {
   position: inherit;
   width: 50%;
   margin-top: 10px;
@@ -156,17 +156,24 @@ html, body {
   margin-left: 30%;
 }
 /* Entry display */
-.individual-entry {
+.entry-container {
   text-align: center;
-  margin-top: 35px;
-  margin-bottom: 35px;
-  padding-bottom: 35px;
-  margin-left: auto;
-  margin-right: auto;
   border-bottom: 1px dotted black;
+  margin-top: 15px;
+  margin-bottom: 30px;
 }
 
-.category-text {
+.tag-container {
+  margin-top: 15px;
+}
+
+.entry-tag {
+  border: 1px solid black;
+  margin: 5px;
+  padding: 2px 4px;
+}
+
+.tag-text {
   color: blue;
   font-weight: bold;
 }
