--- a/style/style.css
+++ b/style/style.css
@@ -11,12 +11,42 @@ html, body {
 
 /* Sidebar styles */
 #sidebar {
+  padding: 0;
   /* TODO: Add styles */
 }
 
 #sidebar .sidebar-components {
   list-style: none;
   padding: 0;
+  margin-left: 10px;
+}
+
+/* ActionBar styles */
+#action-bar {
+  background-color: black;
+}
+
+#action-bar .action-bar-item {
+  margin-top: 10px;
+  display: inline-block;
+  width: 25%;
+  color: white;
+  text-align: center;
+  font-weight: 500;
+  height: 75px;
+}
+
+#action-bar .action-bar-item .glyphicon {
+  font-size: 2em;
+  margin-bottom: 10px;
+}
+
+#action-bar .action-bar-item.active {
+  border-bottom: 6px solid #0EBFE9;
+}
+
+#action-bar .action-bar-item:hover {
+  color: #0EBFE9;
 }
 
 /* EntryForm styles */
