--- a/style/style.css
+++ b/style/style.css
@@ -107,3 +107,8 @@ html, body {
 #entry-view .entry-text {
   margin-top: 30px;
 }
+
+/* EntrySeach styles */
+#entry-search {
+  margin-top: 30px;
+}
