add locked scrolling

--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,6 @@
 html, body {
-   overflow-x: hidden;
-   height: 100%;
-   width: 100%;
+  overflow: hidden;
+  height: 100%;
 }
 
 .container {
@@ -73,11 +72,11 @@ html, body {
 
 /* EntryList styles */
 #entry-list {
-  /* TODO: Add styles */
+  overflow-y: scroll;
+  height: 100vh;
 }
 
 #entry-list .entry-item-container {
-  text-align: center;
   margin-top: 15px;
   margin-bottom: 30px;
 }
@@ -116,6 +115,8 @@ html, body {
 /* EntryFilter styles */
 #entry-filter {
   margin-top: 30px;
+  overflow-y: scroll;
+  height: 50vh;
 }
 
 #entry-filter ul {
