--- a/style/style.css
+++ b/style/style.css
@@ -8,11 +8,14 @@ html, body {
 .container {
   margin: 0;
   padding: 0;
+  width: 100%;
 }
 
 /* Sidebar styles */
 #sidebar {
   padding: 0;
+  height: 100vh;
+  background-color: #fafafa;
 }
 
 #sidebar .sidebar-components {
@@ -22,7 +25,7 @@ html, body {
 
 /* ActionBar styles */
 #action-bar {
-  background-color: black;
+  background-color: #274B62;
 }
 
 #action-bar .action-bar-item {
@@ -50,12 +53,12 @@ html, body {
 
 /* EntryForm styles */
 #entry-form {
-  margin: 15px;
+  margin: 0 15px 15px 15px;
 }
 
 #entry-form .entry-form-title {
   font-size: 20px;
-  font-weight: bold;
+  font-weight: 300;
 }
 
 #entry-form .entry-textarea {
@@ -63,12 +66,23 @@ html, body {
 }
 
 #entry-form .tags-input {
-  width: 70%;
+  width: 80%;
   margin-top: 10px;
 }
 
 #entry-form button {
+  margin-top: 10px;
   margin-left: 10px;
+  background-color: #0EBFE9;
+}
+
+.entry-form-container .markdown-text {
+  margin: 20px 0 0 15px;
+  color: darkslategray;
+}
+
+.entry-form-container .markdown {
+  margin: 5px 15px 0 15px;
 }
 
 /* EntryList styles */
@@ -82,9 +96,24 @@ html, body {
   max-height: 8em;
   overflow: hidden;
   /* TODO: Make this better */
-  border-left: 4px solid #f8f8f8;
-  border-top: 4px solid #f8f8f8;
-  border-right: 4px solid #f8f8f8;
+  border-left: 4px solid #f7f7f7;
+  border-top: 4px solid #f7f7f7;
+  border-right: 4px solid #f7f7f7;
+}
+
+/* Fix for markdown */
+#entry-list .entry-item-container .entry-text * {
+  font-size: 14px;
+}
+
+#entry-list .entry-item-container a {
+  color: black;
+  text-decoration: none;
+}
+
+#entry-list .entry-item-container:hover {
+  border-right: 6px solid #0EBFE9;
+  background-color: rgba(211,211,211, 0.5);
 }
 
 #entry-list .entry-header {
@@ -118,10 +147,54 @@ html, body {
   margin-top: 30px;
 }
 
+#entry-view-list {
+  height: 100vh;
+  overflow-y: scroll;
+}
+
+#entry-view-list .entry-view-item {
+  padding: 15px 0 15px 0;
+  border-bottom: 3px solid #f7f7f7;
+}
+
+#entry-view .entry-view-item {
+  margin-right: 50px;
+}
+
+#entry-view .entry-view-item .action-bar {
+  text-align: center;
+}
+
+#entry-view .entry-view-item .action-bar span {
+  color: #A9A9A9;
+  margin: 0 5px 0 5px;
+}
+#entry-view .entry-view-item .action-bar span:hover {
+  color: #0EBFE9;
+}
+
+#entry-view .shared-link-container {
+  text-align: center;
+}
+
+#entry-view .entry-view-selector .glyphicon {
+  font-size: 1.75em;
+  color: #0EBFE9;
+  padding: 10px;
+}
+
+#entry-view .entry-view-selector-multi .glyphicon {
+  font-size: 1.75em;
+  padding: 10px;
+  background-color: #0EBFE9;
+  color: white;
+}
+
 #entry-view .date-text {
   text-align: center;
   font-weight: bold;
   text-transform: uppercase;
+  margin-bottom: 0;
 }
 
 #entry-view .entry-text {
@@ -136,21 +209,88 @@ html, body {
 
 /* EntrySeach styles */
 #entry-search {
-  margin: 15px;
+  margin-top: 15px;
+}
+
+#entry-search input, h4 {
+  margin: 0 15px 15px 15px;
 }
 
 #entry-search .input-group {
-  width: 100%;
+  width: 90%;
 }
 
 /* EntryFilter styles */
-#entry-filter {
-  margin: 15px;
+#filter-glyphicon {
+  margin-left: 100%%;
+}
+
+#entry-filter{
   overflow-y: scroll;
-  height: 50vh;
+  height: 25vh;
+  margin-bottom: 10px;
 }
 
 #entry-filter ul {
   list-style: none;
   padding: 0;
+}
+
+#entry-filter .hide{
+  display: none;
+}
+
+#filter #filter-button {
+  display: block;
+  margin: 0 auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.filter-results {
+  position: relative;
+  overflow-y: scroll;
+  height:75vh;
+}
+
+.filter-tag:hover {
+  padding-right: 5px;
+  background-color: rgba(211,211,211, 0.5);
+  cursor: pointer;
+}
+
+.filter-results {
+  overflow-y: scroll;
+  height:75vh;
+}
+
+/* Filter Tag Styles */
+.filter-tag.active {
+  font-weight: bold;
+  color: #0EBFE9;
+}
+/* SharedEntry styles */
+#shared-entry-view {
+  height: 100vh;
+  background-color: #f7f7f7;
+  overflow-y: scroll;
+}
+
+#shared-entry-item {
+  height: 100vh;
+  background-color: white;
+  padding: 40px 40px 0 40px;
+}
+
+#shared-entry-item .entry .entry-note {
+  text-align: center;
+  font-weight: 200;
+  font-style: italic;
+  font-size: 16px;
+  margin: 0 0 5px 0;;
+}
+#shared-entry-item .entry .entry-date {
+  text-align: center;
+  font-weight: bold;
+  text-transform: uppercase;
 }
