--- a/style/style.css
+++ b/style/style.css
@@ -666,7 +666,9 @@ input[type="checkbox"]:focus{
   float: none;
   margin-left: auto;
   margin-right: auto;
-  display: inline-block;
+  display: block;
+  border-bottom: 1px solid rgba(211,211,211, 0.5);
+  margin-bottom: 20px;
 }
 
 .stats-bar-item {
@@ -680,7 +682,13 @@ input[type="checkbox"]:focus{
 }
 
 #stats-bar .stats-bar-item .active {
-  color: red;
+  color: rgba(211,211,211, 0.5);
+  border-bottom: 1px solid #3d3330;
+  cursor: pointer;
+}
+
+.stats-bar-item.active {
+  font-weight: bold;
 }
 
 .stats-bar-item p {
@@ -699,11 +707,11 @@ input[type="checkbox"]:focus{
 }
 
 #stats p {
-  font-size: 30px;
+  font-size: 20px;
 }
 
 #stats #stats-count {
-  font-size: 25px;
+  font-size: 15px;
   color: grey;
 }
 
